feat: include edit tool in tab tools
